<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginStart="16dp"
        android:text=""
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.191"
        app:layout_constraintStart_toEndOf="@+id/selectedIconImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text=""
        android:textColor="@color/grey"
        app:layout_constraintStart_toEndOf="@+id/selectedIconImageView"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/selectedIconImageView"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="44dp"
        android:src="@drawable/user_profile"
        app:civ_border_color="@color/background"
        app:civ_border_width="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/changeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="3dp"
        android:text="Изменить"
        android:textColor="@color/blue_buttons"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectedIconImageView" />

    <LinearLayout
        android:id="@+id/discussionsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/changeTextView">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="26dp"
            android:src="@drawable/comments" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="24dp"
            android:text="@string/comments"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/discussionsLinearLayout">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="26dp"
            android:src="@drawable/clock" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="24dp"
            android:text="@string/history"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="26dp"
            android:src="@drawable/settings" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="24dp"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />


    </LinearLayout>

    <Button
        android:id="@+id/exitButton"
        android:layout_width="375dp"
        android:layout_height="49dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/border"
        android:text="@string/exit"
        android:textAllCaps="false"
        android:textColor="@color/blue_buttons"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>